fixed x overflow issue

--- a/static/pws.css
+++ b/static/pws.css
@@ -8,6 +8,7 @@
 body {
     margin: 0;
     color: var(--main-font-color);
+    overflow-x: hidden;
 }
 
 html {
